cabal-version:          >= 1.10

-- http://haskell.org/cabal/users-guide/

name:                   jormungandr-explorer-node
version:                0.1.0.0
synopsis:               The DB node for the Jormungandr Block Explorer
description:            A Cardano node that follows the Jormungandr chain and inserts data from the
                        chain into a PostgresQL database.
homepage:               https://github.com/input-output-hk/cardano-explorer
bug-reports:            https://github.com/input-output-hk/cardano-explorer/issues
license:                Apache-2.0
author:                 IOHK Engineering Team
maintainer:             operations@iohk.io
copyright:              (c) 2019 IOHK
category:               Cryptocurrency
build-type:             Simple
extra-source-files:     CHANGELOG.md

library
  default-language:     Haskell2010
  hs-source-dirs:       src

  ghc-options:          -Wall
                        -Wcompat
                        -fwarn-redundant-constraints
                        -fwarn-incomplete-patterns
                        -fwarn-unused-imports
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns

  exposed-modules:      Explorer.Node
                        Explorer.Node.Launch

  other-modules:        Explorer.Node.Insert
  --                       Explorer.Node.Insert.Genesis
  --                       Explorer.Node.Insert.Genesis
                        Explorer.Node.Metrics
                        Explorer.Node.Util
                        Explorer.Node.Rollback

  build-depends:        base                            >= 4.12         && < 4.13
                      , aeson
                      , aeson-qq
                      , base16-bytestring
                      , bytestring
                      , cardano-config
                      , cardano-explorer-db
                      , cardano-node
                      , cardano-prelude
                      , cardano-shell
                      , cardano-wallet-core
                      , cardano-wallet-jormungandr
                      , cborg
                      , containers
                      , cryptonite
                      , directory
                      , extra
                      , filepath
                      , formatting
                      , io-sim-classes
                      , iohk-monitoring
                      , memory
                      , monad-logger
                      , network
                      , optparse-applicative
                      , persistent
                      , process
                      , prometheus
                      , reflection
                      , serialise
                      , stm
                      , temporary
                      , text
                      , text-class
                      , time
                      , transformers
                      , yaml

executable jormungandr-explorer-node
  default-language: Haskell2010
  main-is:          Main.hs
  build-depends:    base
                  , cardano-wallet-core
                  , cardano-wallet-jormungandr
                  , process
                  , jormungandr-explorer-node
                  , iohk-monitoring
                  , text-class
